unpackaged/main/default/objects/AccTeamFromPortfolioAssignmentService__e/AccTeamFromPortfolioAssignmentService__e.object-meta.xml
<CustomObject>
    <description>Used in  &quot;PortfolioAssignmentService&quot;  Apex Class</description>
    <label>AccTeamFromPortfolioAssignmentService</label>
    <pluralLabel>AccTeamFromPortfolioAssignmentService</pluralLabel>
</CustomObject>