unpackaged/main/default/objects/AccTeamFromPortfolioAssignmentService__e/fields/AccountAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>AccountAccessLevel__c</fullName>
    <label>AccountAccessLevel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>