unpackaged/main/default/objects/AccTeamFromPortfolioAssignmentService__e/fields/BSF_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>BSF_Portfolio__c</fullName>
    <label>BSF_Portfolio__c</label>
    <length>50</length>
    <type>Text</type>
</CustomField>