unpackaged/main/default/objects/AccTeamFromPortfolioAssignmentService__e/fields/CaseAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>CaseAccessLevel__c</fullName>
    <label>CaseAccessLevel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>