unpackaged/main/default/objects/AccTeamFromPortfolioAssignmentService__e/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>AccountTeam End_Date__c</description>
    <label>End_Date__c</label>
    <type>Date</type>
</CustomField>