unpackaged/main/default/objects/AccTeamFromPortfolioAssignmentService__e/fields/OpportunityAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAccessLevel__c</fullName>
    <label>OpportunityAccessLevel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>