unpackaged/main/default/objects/AccTeamFromPortfolioAssignmentService__e/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>AccountTeam Start date</description>
    <label>Start_Date__c</label>
    <type>Date</type>
</CustomField>