unpackaged/main/default/objects/AccTeamFromPortfolioAssignmentService__e/fields/TeamMemberRole__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberRole__c</fullName>
    <label>TeamMemberRole</label>
    <length>50</length>
    <type>Text</type>
</CustomField>