unpackaged/main/default/objects/AccTeamFromPortfolioAssignmentService__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>AccountTeam UserId</description>
    <label>UserId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>